--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
                 </div>
                 <div class="hero-footer">
                     <div class="-counter">
-                        <p><small>Can't wait? Check out our portfolio in the meantime!</small><br /><br /></p>
+                        <h3>Can't wait? Check out our portfolio in the meantime!<br /><br /></h3>
                         <a href="https://lushka.al/portfolio" target="_blank" rel="noopener noreferrer"
                             class="button button--inverted button--hollow button--hollow--inverted">Portfolio</a>
                     </div>
                     <div class="-social">
-                        <p><small>Follow us</small></p>
+                        <p>Follow us</p>
                         <ul>
                             <li><a href="https://instagram.com/ueb.al"><span class="socicon-instagram"></span></a></li>
                         </ul>
