--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="hero-banner">
                     <h1>Coming soon.</h1>
-                    <p class="sub-title">Our website is coming in November 2022</p>
+                    <p class="sub-title">Our website is coming in end of December 2022</p>
                 </div>
                 <div class="hero-footer">
                     <div class="-counter">
