--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="hero-banner">
                     <h1>Coming soon.</h1>
-                    <p class="sub-title">Our website is from the future, but it's still stuck on a black hole somewhere!</p>
+                    <p class="sub-title">Our website is coming from the future, but it's still stuck on a black hole somewhere!</p>
                 </div>
                 <div class="hero-footer">
                     <div class="-counter">
@@ -44,6 +44,7 @@
                         <p>Follow us</p>
                         <ul>
                             <li><a href="https://instagram.com/ueb.al"><span class="socicon-instagram"></span></a></li>
+                            <li><a href="https://tiktok.com/ueb.al"><span class="socicon-tiktok"></span></a></li>
                         </ul>
                     </div>
                 </div>
