--- a/404.html
+++ b/404.html
@@ -1,43 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="default default_index" lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Not Found</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Chango&family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <style>
-        body{
-            background-image: url("https://images.unsplash.com/photo-1616235132417-99f443954d2e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80");
-            background-size: cover;
-            font-family: 'Roboto', 'sans-serif';
-        }
-        main{
-            display: flex;
-            height: 100vh;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
-        .header404{
-            font-family: 'Chango', cursive;
-            font-size: 48px;
-        }
-        .content404{
-            text-align: center;
-        }
-    </style>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <title>404 - ueb.al</title>
+    <meta name="description" content="Ueb.al">
+    <meta name="author" content="Ueb.al">
+
+    <meta property="og:title" content="Ueb.al">
+    <meta property="og:type" content="website">
+    <link rel="icon" href="https://ueb.al/favicon.svg">
+
+    <link href="assets/css_002.css" rel="stylesheet">
+    <link href="assets/css.css" rel="stylesheet">
+    <link href="assets/default-455938d9.css" rel="stylesheet">
 </head>
+
 <body>
     <main>
-        <h4 class="header404">404</h4>
-        <div class="content-404">
-            Uh-oh! We couldn't find the page you are looking for.
-        </div>
-        <p>
-            <a href="/">Check our home page</a>
-        </p>
+        <section id="hero" class="hero">
+            <div class="hero-content" style="height: 985px;">
+                <div class="hero-header">
+                    <div class="-cta js--localscroll">
+                        <a href="mailto:anxhelo@lushka.al"
+                            class="button button--inverted button--hollow button--hollow--inverted">Get in touch</a>
+                    </div>
+                </div>
+                <div class="hero-banner">
+                    <h1>404 Not Found</h1>
+                    <p class="sub-title">Our website is still under development, please hold on just a little longer!</p>
+                </div>
+                <div class="hero-footer">
+                    <div class="-counter">
+                        <h3>Can't wait? Check out our portfolio in the meantime!<br /><br /></h3>
+                        <a href="https://lushka.al/portfolio" target="_blank" rel="noopener noreferrer"
+                            class="button button--inverted button--hollow button--hollow--inverted">Portfolio</a>
+                    </div>
+                    <div class="-social">
+                        <p>Follow us</p>
+                        <ul>
+                            <li><a href="https://instagram.com/ueb.al"><span class="socicon-instagram"></span></a></li>
+                            <li><a href="https://tiktok.com/ueb.al"><span class="socicon-tiktok"></span></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="hero-threejs"><canvas style="width: 1920px; height: 985px;" width="1920" height="985"></canvas>
+            </div>
+        </section>
+
     </main>
-    
+    <script src="assets/jquery-59e367f0.js"></script>
+    <script src="assets/threejs-6ebcc050.js"></script>
+    <script src="assets/projector-2f448d36.js"></script>
+    <script src="assets/canvasrenderer-0792e9f3.js"></script>
+    <script src="assets/feather-cae18e22.js"></script>
+    <script src="assets/jquery-scrollto-94f5d0cb.js"></script>
+    <script src="assets/jquery-localscroll-640631e1.js"></script>
+    <script src="assets/packery-8c62b54b.js"></script>
+    <script src="assets/sphere-a34bacf9.js"></script>
+    <script src="assets/main-d441790e.js"></script>
+    <script src="assets/default-9ff86e20.js"></script>
 </body>
+
 </html>
